# portfolio-2026

./: .env.example  .gitignore  LICENSE  LICENSE-CONTENT.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.cursor/plans/: complete_paper_01_97a23534.plan.md  personal_site_blog_+_architecture_c84cf9c2.plan.md  research_platform_foundation_a871dbf5.plan.md
.github/workflows/: ci.yml  fpl-collector.yml  link-check.yml
apps/fpl/: package.json  tsconfig.json  vite.config.ts
apps/fpl/public/: robots.txt  sitemap.xml
apps/fpl/src/: deadline-room.css  opportunity-map.css  routeTree.gen.ts  styles.css
apps/fpl/tests/: metadata.test.ts
apps/research/: package.json  vite.config.ts
apps/website/: .gitignore  package.json  tsconfig.json
data/processed/: govuk_a11y.parquet
data/summaries/: govuk-a11y.json
docs/: DATA_LICENSES.md  PREREGISTRATION.md  personal_frontend_ai_research_findings.md  portfolio-brand-refresh-audit.md  research_data_landscape.md  send_data_deep_dive_and_research_directions.md  software_engineering_research_opportunities.md
docs/brand-refresh/: implementation-spec.md  visual-verification.md
docs/fpl/: fpl-market-intelligence-app-experiments.md  fpl-opportunity-map-implementation.md
docs/research/: fpl-market-intelligence-app-experiments.md
tools/analysis/: common.py  package.json  pyproject.toml  smoke_test.py  uk_confirmatory.py  us_confirmatory.py
tools/etl/: package.json  tsconfig.json
tools/scanner/: package.json  tsconfig.json
tools/site-quality/: package.json  tsconfig.json
(+102 files in other folders)
